--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "repository": "https://github.com/tasddc1226/TypeChain.git",
   "license": "MIT",
   "devDependencies": {
+    "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   }
 }
