--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -10,6 +10,7 @@
   "author": "tasddc1226",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.1.2"
   }
 }
