--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "backend": "nodemon server/index.js",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "start": "node server/index.js",
+    "start:dev": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tasddc1226",
