--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -7,13 +7,16 @@
     "backend": "nodemon server/index.js",
     "start": "node server/index.js",
     "start:dev": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
+
   },
   "author": "tasddc1226",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "concurrently": "^6.5.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
