--- a/boiler-plate/client/package.json
+++ b/boiler-plate/client/package.json
@@ -3,23 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.18.0",
-    "axios": "^0.24.0",
-    "http-proxy-middleware": "^2.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "antd": "^3.24.1",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "formik": "^1.5.8",
+    "moment": "^2.24.0",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0-rc.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.2"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
