--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -14,14 +14,20 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.1",
-    "concurrently": "^6.5.1",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.17.2",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.2"
+    "moment": "^2.24.0",
+    "mongoose": "^5.12.8",
+    "react-redux": "^5.0.7",
+    "saslprep": "^1.0.3",
+    "supports-color": "^7.1.0"
   },
   "devDependencies": {
+    "concurrently": "^6.1.0",
     "nodemon": "^2.0.15"
   }
 }
