--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -7,15 +7,16 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.6.2",
-    "react": "^17.0.2",
+    "firebase": "^7.24.0",
+    "md5": "^2.3.0",
+    "react": "^16.14.0",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.22.5",
+    "react-hook-form": "^6.9.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "redux": "^4.1.2",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
