--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.24.0",
     "md5": "^2.3.0",
     "mime-types": "^2.1.34",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
