--- a/boiler-plate/package.json
+++ b/boiler-plate/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.12.8",
+    "passport-google-oauth": "^2.0.0",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
     "supports-color": "^7.1.0"
